force-app/main/default/objects/XFILES__Link__c/XFILES__Link__c.object-meta.xml
<CustomObject>
    <description>Link</description>
    <label>Link Detail</label>
    <nameField>
        <label>Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Links</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>