force-app/main/default/objects/XFILES__Link__c/fields/XFILES__Comments__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Comments__c</fullName>
    <description>Comments</description>
    <inlineHelpText>Comments</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>