force-app/main/default/objects/XFILES__Link__c/fields/XFILES__Link_Public_URL__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Link_Public_URL__c</fullName>
    <description>Link Public URL</description>
    <inlineHelpText>Link Public URL</inlineHelpText>
    <label>Link Public URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>