force-app/main/default/objects/XFILES__Link__c/fields/XFILES__Link_View_Download_Count__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Link_View_Download_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Link View/Download Count</description>
    <inlineHelpText>Link View/Download Count</inlineHelpText>
    <label>Link View/Download Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>