force-app/main/default/objects/XFILES__Link__c/fields/XFILES__Parent_Content__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Parent_Content__c</fullName>
    <description>Parent Content information</description>
    <inlineHelpText>Parent Content Details</inlineHelpText>
    <label>Parent Content</label>
    <referenceTo>XFILES__External_Content_Detail__c</referenceTo>
    <relationshipLabel>Content Details</relationshipLabel>
    <relationshipName>PContent_Links</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>