force-app/main/default/objects/XFILES__Link__c/fields/XFILES__Related_Object_Type__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Related_Object_Type__c</fullName>
    <description>Related Object Type (Attachment, Document, Content)</description>
    <inlineHelpText>Related Object Type (Attachment, Document, Content)</inlineHelpText>
    <label>Related Object Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>