force-app/main/default/objects/XFILES__Link__c/fields/XFILES__Related_Record_Delete_Status__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Related_Record_Delete_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Related Record Delete Status</description>
    <inlineHelpText>Related Record Delete Status</inlineHelpText>
    <label>Related Record Delete Status</label>
    <type>Checkbox</type>
</CustomField>