force-app/main/default/objects/XFILES__Link__c/fields/XFILES__Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Related_Record_Id__c</fullName>
    <description>Related Record Id (Attachment, Document, Content)</description>
    <inlineHelpText>Related Record Id (Attachment, Document, Content)</inlineHelpText>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>