force-app/main/default/objects/XFILES__Link__c/fields/XFILES__Tags__c.field-meta.xml
<CustomField>
    <fullName>XFILES__Tags__c</fullName>
    <description>Tags in csv format</description>
    <inlineHelpText>Tags in csv format</inlineHelpText>
    <label>Tags</label>
    <type>TextArea</type>
</CustomField>