force-app/main/default/objects/XFILES__Link__c/listViews/XFILES__All.listView-meta.xml
<ListView>
    <fullName>XFILES__All</fullName>
    <columns>XFILES__Parent_Content__c</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>